# industrial-rag-qna-benchmark

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/PULL_REQUEST_TEMPLATE/: PULL_REQUEST_TEMPLATE.md
.streamlit/: config.toml
config/: setup_paths.py
src/: ui.py
src/evaluation/metrics/: semscore.py
src/interface/: ui.py
src/models/: openai_models.py
src/preprocessing/: preprocessing.py
src/steps/: step0_home.py  step1_upload.py  step2_llms.py  step3_metrics.py  step4_dataset.py  step5_hyperparams.py  step6_run.py  step7_results.py
src/utils/: helper_functions.py  logger.py  suppress_warnings.py
