[tool.poetry]
name = "industrial-rag-qna-benchmark"
version = "0.1.0"
description = "Benchmarking the performance of proprietary vs open-source LLMs in industrial QnA tasks using various RAG-based implementations and evaluation metrics."
authors = ["Ioannis Partalas <partalas.ioan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.12"
pydantic = "^2.9.1"
transformers = "^4.44.2"
langchain = "^0.2.16"
langchain-openai = "^0.1.23"
deepeval = "^1.1.6"
ragas = "^0.1.17"
torch = "2.2.1"
unstructured = {extras = ["pdf"], version = "^0.15.13"}
streamlit = "^1.38.0"
accelerate = "^1.0.0"
extra-streamlit-components = "^0.1.71"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
colorlog = "^6.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
